--- a/index.html
+++ b/index.html
@@ -66,6 +66,35 @@ section {max-width:1200px; margin:auto; padding:60px 20px;}
 .modal-content p {text-align:center; color:#555; font-size:0.95rem; margin-bottom:25px;}
 .close {font-size:28px; font-weight:bold; cursor:pointer; position:absolute; right:20px; top:15px; color:#333;}
 
+    /* NISM Course Modal - Enhanced UI */
+#courseModal .modal-content {
+    max-width:650px;
+    margin:80px auto;
+    padding:40px 30px;
+    border-radius:16px;
+    box-shadow:0 15px 40px rgba(0,0,0,0.3);
+    background:linear-gradient(135deg,#f0f4ff,#ffffff);
+    font-family:'Roboto',sans-serif;
+    animation:fadeIn 0.4s ease-out;
+    color:#333;
+}
+#courseModal h2 {
+    font-size:2rem;
+    font-family:'Poppins',sans-serif;
+    font-weight:700;
+    color:#1a73e8;
+    margin-bottom:10px;
+    text-align:center;
+}
+#courseModal p {text-align:center; font-size:1.05rem; color:#555; margin-bottom:25px;}
+#courseModal h3 {color:#155ab6; font-size:1.2rem; margin-top:20px; margin-bottom:8px;}
+#courseModal ul {list-style:disc inside; padding-left:15px; margin-bottom:20px; font-size:1rem; color:#444; line-height:1.6;}
+#courseModal #courseCTA {font-weight:600; font-size:1rem; color:#1a73e8; text-align:center; margin-top:20px; white-space:pre-line;}
+#courseModal .close {font-size:30px; font-weight:700; cursor:pointer; position:absolute; right:25px; top:20px; color:#1a73e8; transition:0.3s;}
+#courseModal .close:hover {color:#155ab6;}
+@keyframes fadeIn {from {opacity:0; transform:translateY(-20px);} to {opacity:1; transform:translateY(0);}}
+
+
 /* Form Styles */
 #nismForm .form-group {margin-bottom:15px; display:flex; flex-direction:column;}
 #nismForm label {margin-bottom:6px; font-weight:500; font-size:0.95rem;}
@@ -322,4 +351,5 @@ document.querySelectorAll(".faq-item").forEach(item=>{
 
 </body>
 </html>
+
 
